# storyswarm

./: .gitignore  README.md  app.py  pyproject.toml
.github/workflows/: lint.yml  test.yml  typecheck.yml
src/config/: __init__.py  app_config.py  defaults.yaml  environment.yaml  logger.py
src/storyparts/: __init__.py  agents.py  models.py
tests/config/: test_app_config.py
